# jam

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
scripts/: package  setup-env
src/jam/: __init__.py  __main__.py
tests/: test_codecs.py  test_data.py
