[metadata]
name = jam
version = 0.0.1
description = Simple utility to convert between config codecs
long_description = file: README.rst
author = Kevin Murphy
author_email = kevin@murp.us
license = MIT
license_files = LICENSE

[options]
package_dir =
    =src
packages = find:
python_requires = >= 3.6
install_requires =
    PyYAML
    toml
zip_safe = false  # TODO: Comment about why this is necessary
include_package_data = true

[options.packages.find]
where = src

[options.extras_require]
dev =
    black==20.8b1
    flake8
    mypy==0.790
    pex
    pep517
    pytest
    tox
    wheel

[options.package_data]
py_typed = py.typed

[options.entry_points]
console_scripts =
    jam=jam.__main__:main

[flake8]
# Flake8 is a Python linter.
# https://flake8.pycqa.org/en/latest

# Note: This should match the value for [tool.black.line-length] in pyproject.toml!
max-line-length = 100

# If you add new "ignore" items, make sure to document the error/warning
# numbers for future reference!
ignore =
    # line too long (>80)
    E501

[mypy]
# Mypy is a Python type checker
# https://mypy.readthedocs.io/en/stable/index.html

# Make error behavior a little more user friendly (at the expense of
# some runtime slowdown?)
pretty = True
show_column_numbers = True
show_error_codes = True
show_error_context = True

# These flags are equivalent to running mypy in "--strict" mode
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
no_implicit_optional = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
